--- a/pages/creategame.html
+++ b/pages/creategame.html
@@ -82,7 +82,7 @@
             owner: 'Gramdie',
             repo: 'Gramdie-repository-for-games',
             path: 'posts', // Pasta onde os JSONs serão salvos
-            token: 'COLE_SEU_TOKEN_AQUI' // Precisa de um Personal Access Token com permissão 'repo'
+            token: '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' // Precisa de um Personal Access Token com permissão 'repo'
         };
 
         const btn = document.getElementById('btnSubmit');
