--- a/pages/creategame.html
+++ b/pages/creategame.html
@@ -126,6 +126,6 @@
         <div id="status"></div>
     </div>
 
-    <script type="module" src="../js/postGame.js"></script>
+    <script type="module" src="../js/postgame.js"></script>
 </body>
 </html>
