--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <style>
         :root {
             --bg: #121212;
-            --header-border: #2a2a2a;
+            --header-border: #2a2a2a; /* Barra divisória levemente mais clara */
             --card-bg: #1e1e1e;
             --text-main: #ffffff;
-            --text-gray: #aaaaaa;
+            --text-gray: #888888;
             --blue: #1e90ff;
             --search-bg: #1e1e1e;
         }
 
         body.light-mode {
-            --bg: #f5f5f5;
-            --header-border: #dddddd;
-            --card-bg: #ffffff;
+            --bg: #ffffff;
+            --header-border: #eeeeee;
+            --card-bg: #f9f9f9;
             --text-main: #121212;
             --text-gray: #666666;
             --blue: #007bff;
-            --search-bg: #e0e0e0;
+            --search-bg: #f0f0f0;
         }
 
         body {
@@ -35,7 +35,6 @@
             transition: 0.3s;
         }
 
-        /* Header e Barra Divisória */
         header {
             display: flex;
             justify-content: space-between;
@@ -51,7 +50,7 @@
         .logo { font-size: 24px; font-weight: bold; cursor: pointer; }
         .logo span { color: var(--text-gray); font-size: 16px; font-weight: normal; margin-left: 5px; }
 
-        /* Pesquisa Centralizada */
+        /* Pesquisa Central */
         .search-container {
             position: absolute;
             left: 50%;
@@ -77,8 +76,6 @@
             width: 100%;
         }
 
-        .search-box input::placeholder { color: var(--text-gray); }
-
         .search-results {
             position: absolute;
             background: var(--card-bg);
@@ -87,7 +84,7 @@
             margin-top: 5px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.5);
             display: none;
-            max-height: 480px; /* Max 12 itens de ~40px */
+            max-height: 500px;
             overflow-y: hidden;
             border: 1px solid var(--header-border);
         }
@@ -97,13 +94,11 @@
             align-items: center;
             padding: 10px;
             cursor: pointer;
-            transition: 0.2s;
         }
 
         .result-item:hover { background: var(--header-border); }
         .result-item img { width: 35px; height: 35px; border-radius: 5px; margin-right: 12px; object-fit: cover; }
 
-        /* Botão de Tema */
         .theme-toggle {
             width: 40px;
             height: 40px;
@@ -115,10 +110,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: 0.3s;
         }
 
-        /* Grid de Jogos */
+        /* Grade de Jogos */
         #games-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
@@ -130,48 +124,33 @@
             background: var(--card-bg);
             border-radius: 15px;
             overflow: hidden;
-            position: relative;
             transition: 0.3s;
             border: 1px solid transparent;
+            display: flex;
+            flex-direction: column;
         }
 
         .game-card:hover { border-color: #555; } /* Borda cinza fina no hover */
 
         .game-card img { width: 100%; height: 160px; object-fit: cover; }
-        .card-content { padding: 15px; }
-        .card-desc { font-size: 14px; color: var(--text-gray); margin: 10px 0; min-height: 40px; }
+        .card-content { padding: 15px; flex-grow: 1; display: flex; flex-direction: column; }
+        .card-desc { font-size: 14px; color: var(--text-gray); margin: 10px 0; line-height: 1.4; }
 
-        .tags { display: flex; gap: 5px; flex-wrap: wrap; margin-top: 10px; }
-        .tag { font-size: 10px; padding: 2px 6px; border-radius: 4px; background: #333; color: #1e90ff; font-weight: bold; }
-
-        /* Overlay de Download */
-        .download-overlay {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.7);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            transition: 0.3s;
-            z-index: 10;
-        }
-
-        .game-card:hover .download-overlay { opacity: 1; }
+        .tags { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 15px; }
+        .tag { font-size: 10px; padding: 2px 6px; border-radius: 4px; background: #333; color: var(--blue); font-weight: bold; }
 
         .btn-download {
             background: var(--blue);
             color: white;
-            padding: 10px 25px;
-            border-radius: 20px;
+            padding: 10px;
+            border-radius: 10px;
             text-decoration: none;
             font-weight: bold;
-            transition: 0.2s;
+            text-align: center;
+            margin-top: auto;
         }
 
-        .btn-download:hover { transform: scale(1.1); }
-
-        #loading-trigger { height: 50px; text-align: center; color: var(--text-gray); }
+        #loading-trigger { height: 60px; text-align: center; color: var(--text-gray); }
     </style>
 </head>
 <body>
@@ -193,7 +172,7 @@
     </header>
 
     <div id="games-grid"></div>
-    <div id="loading-trigger">Carregando mais jogos...</div>
+    <div id="loading-trigger">Carregando mais conteúdo...</div>
 
     <script type="module" src="js/indexlogic.js"></script>
 </body>
