--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --bg: #121212;
-            --header-border: #2a2a2a; /* Barra divisória levemente mais clara */
+            --header-border: #2a2a2a; /* Divisória levemente mais clara que o fundo */
             --card-bg: #1e1e1e;
             --text-main: #ffffff;
             --text-gray: #888888;
@@ -20,11 +20,11 @@
         body.light-mode {
             --bg: #ffffff;
             --header-border: #eeeeee;
-            --card-bg: #f9f9f9;
+            --card-bg: #f5f5f5;
             --text-main: #121212;
             --text-gray: #666666;
             --blue: #007bff;
-            --search-bg: #f0f0f0;
+            --search-bg: #e0e0e0;
         }
 
         body {
@@ -32,9 +32,10 @@
             color: var(--text-main);
             font-family: 'Inclusive Sans', sans-serif;
             margin: 0;
-            transition: 0.3s;
+            transition: background 0.3s;
         }
 
+        /* Header e Barra Divisória */
         header {
             display: flex;
             justify-content: space-between;
@@ -47,15 +48,15 @@
             z-index: 1000;
         }
 
-        .logo { font-size: 24px; font-weight: bold; cursor: pointer; }
-        .logo span { color: var(--text-gray); font-size: 16px; font-weight: normal; margin-left: 5px; }
+        .logo { font-size: 24px; font-weight: bold; cursor: pointer; display: flex; align-items: baseline; }
+        .logo span { color: var(--text-gray); font-size: 16px; font-weight: normal; margin-left: 8px; }
 
-        /* Pesquisa Central */
+        /* Pesquisa Centralizada */
         .search-container {
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            width: 350px;
+            width: 380px;
         }
 
         .search-box {
@@ -76,16 +77,18 @@
             width: 100%;
         }
 
+        .search-box input::placeholder { color: var(--text-gray); }
+
         .search-results {
             position: absolute;
             background: var(--card-bg);
             width: 100%;
             border-radius: 12px;
-            margin-top: 5px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.5);
+            margin-top: 8px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
             display: none;
-            max-height: 500px;
-            overflow-y: hidden;
+            max-height: 520px; /* Limite visual para ~12 itens */
+            overflow: hidden;
             border: 1px solid var(--header-border);
         }
 
@@ -94,11 +97,13 @@
             align-items: center;
             padding: 10px;
             cursor: pointer;
+            transition: 0.2s;
         }
 
         .result-item:hover { background: var(--header-border); }
         .result-item img { width: 35px; height: 35px; border-radius: 5px; margin-right: 12px; object-fit: cover; }
 
+        /* Botão de Tema */
         .theme-toggle {
             width: 40px;
             height: 40px;
@@ -110,6 +115,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: 0.3s;
         }
 
         /* Grade de Jogos */
@@ -132,25 +138,32 @@
 
         .game-card:hover { border-color: #555; } /* Borda cinza fina no hover */
 
-        .game-card img { width: 100%; height: 160px; object-fit: cover; }
-        .card-content { padding: 15px; flex-grow: 1; display: flex; flex-direction: column; }
-        .card-desc { font-size: 14px; color: var(--text-gray); margin: 10px 0; line-height: 1.4; }
+        .game-card img { width: 100%; height: 170px; object-fit: cover; }
 
-        .tags { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 15px; }
-        .tag { font-size: 10px; padding: 2px 6px; border-radius: 4px; background: #333; color: var(--blue); font-weight: bold; }
+        .card-content { padding: 18px; flex-grow: 1; display: flex; flex-direction: column; }
+        .card-desc { font-size: 14px; color: var(--text-gray); margin: 12px 0; min-height: 40px; }
 
+        .tags { display: flex; gap: 6px; flex-wrap: wrap; margin-bottom: 15px; }
+        .tag { font-size: 10px; padding: 2px 8px; border-radius: 4px; background: #2a2a2a; color: var(--blue); font-weight: bold; text-transform: uppercase; }
+
+        /* Botão de Download Centralizado */
         .btn-download {
             background: var(--blue);
             color: white;
-            padding: 10px;
+            padding: 12px;
             border-radius: 10px;
             text-decoration: none;
             font-weight: bold;
             text-align: center;
-            margin-top: auto;
+            display: block;
+            margin: 0 auto; /* Centralização horizontal absoluta dentro do card */
+            width: 90%;
+            transition: 0.2s;
         }
 
-        #loading-trigger { height: 60px; text-align: center; color: var(--text-gray); }
+        .btn-download:hover { transform: translateY(-2px); filter: brightness(1.2); }
+
+        #loading-trigger { height: 80px; display: flex; align-items: center; justify-content: center; color: var(--text-gray); }
     </style>
 </head>
 <body>
@@ -172,7 +185,7 @@
     </header>
 
     <div id="games-grid"></div>
-    <div id="loading-trigger">Carregando mais conteúdo...</div>
+    <div id="loading-trigger">Carregando mais jogos...</div>
 
     <script type="module" src="js/indexlogic.js"></script>
 </body>
