--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --bg: #121212;
-            --header-border: #2a2a2a; /* Barra levemente mais clara que o fundo */
+            --header-border: #2a2a2a; /* Barra divisória levemente mais clara */
             --card-bg: #1e1e1e;
             --text-main: #ffffff;
             --text-gray: #888888;
@@ -47,10 +47,11 @@
             z-index: 1000;
         }
 
-        .logo { font-size: 24px; font-weight: bold; cursor: pointer; display: flex; align-items: baseline; }
-        .logo span { color: var(--text-gray); font-size: 16px; font-weight: normal; margin-left: 8px; }
+        .logo-area { display: flex; align-items: baseline; cursor: pointer; }
+        .logo-area h1 { font-size: 24px; margin: 0; }
+        .logo-area span { color: var(--text-gray); font-size: 16px; margin-left: 8px; }
 
-        /* Pesquisa Centralizada */
+        /* Pesquisa Central */
         .search-container {
             position: absolute;
             left: 50%;
@@ -99,7 +100,10 @@
         .result-item:hover { background: var(--header-border); }
         .result-item img { width: 35px; height: 35px; border-radius: 5px; margin-right: 12px; object-fit: cover; }
 
-        .theme-toggle {
+        /* Botões de Ação */
+        .nav-actions { display: flex; gap: 10px; }
+
+        .btn-circle {
             width: 40px;
             height: 40px;
             border-radius: 50%;
@@ -110,7 +114,10 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            transition: 0.2s;
         }
+
+        .btn-circle:hover { transform: scale(1.1); }
 
         /* Grade de Jogos */
         #games-grid {
@@ -131,17 +138,16 @@
             flex-direction: column;
         }
 
-        .game-card:hover { border-color: #555; }
+        .game-card:hover { border-color: #888888; } /* Borda cinza fina no hover */
 
         .game-card img { width: 100%; height: 165px; object-fit: cover; }
-
         .card-content { padding: 18px; flex-grow: 1; display: flex; flex-direction: column; }
         .card-desc { font-size: 14px; color: var(--text-gray); margin: 12px 0; min-height: 42px; }
 
         .tags { display: flex; gap: 6px; flex-wrap: wrap; margin-bottom: 15px; }
         .tag { font-size: 10px; padding: 2px 8px; border-radius: 4px; background: #2a2a2a; color: var(--blue); font-weight: bold; text-transform: uppercase; }
 
-        /* Botão Download Totalmente Centralizado */
+        /* Botão Download Centralizado */
         .btn-download {
             background: var(--blue);
             color: white;
@@ -151,12 +157,10 @@
             font-weight: bold;
             text-align: center;
             width: 100%;
-            box-sizing: border-box;
+            box-sizing: border-box; /* Garante que o padding não "empurre" o botão para fora */
             display: block;
-            transition: 0.2s;
+            margin-top: auto;
         }
-
-        .btn-download:hover { filter: brightness(1.2); }
 
         #loading-trigger { height: 80px; display: flex; align-items: center; justify-content: center; color: var(--text-gray); }
     </style>
@@ -164,19 +168,26 @@
 <body>
 
     <header>
-        <div class="logo" onclick="window.location.reload()">Gramdie <span>Games</span></div>
+        <div class="logo-area" onclick="window.location.reload()">
+            <h1>Gramdie</h1><span>Games</span>
+        </div>
 
         <div class="search-container">
             <div class="search-box">
-                <i class="fas fa-search" style="color: var(--text-gray); cursor: pointer;" id="btnSearch"></i>
+                <i class="fas fa-search" style="color: var(--text-gray);" id="btnSearch"></i>
                 <input type="text" id="searchInput" placeholder="Buscando...">
             </div>
             <div id="searchResults" class="search-results"></div>
         </div>
 
-        <button class="theme-toggle" id="themeBtn">
-            <i class="fas fa-sun" id="themeIcon"></i>
-        </button>
+        <div class="nav-actions">
+            <button class="btn-circle" id="addGameBtn" title="Criar Jogo">
+                <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn-circle" id="themeBtn">
+                <i class="fas fa-sun" id="themeIcon"></i>
+            </button>
+        </div>
     </header>
 
     <div id="games-grid"></div>
