--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         :root {
             --bg: #121212;
-            --header-border: #2a2a2a; /* Barra divisória levemente mais clara */
+            --header-border: #2a2a2a;
             --card-bg: #1e1e1e;
             --text-main: #ffffff;
             --text-gray: #888888;
@@ -51,7 +51,7 @@
         .logo-area h1 { font-size: 24px; margin: 0; }
         .logo-area span { color: var(--text-gray); font-size: 16px; margin-left: 8px; }
 
-        /* Pesquisa Central */
+        /* Pesquisa */
         .search-container {
             position: absolute;
             left: 50%;
@@ -69,97 +69,59 @@
         }
 
         .search-box input {
-            background: none;
-            border: none;
-            color: var(--text-main);
-            margin-left: 10px;
-            outline: none;
-            width: 100%;
+            background: none; border: none; color: var(--text-main);
+            margin-left: 10px; outline: none; width: 100%;
         }
 
         .search-results {
-            position: absolute;
-            background: var(--card-bg);
-            width: 100%;
-            border-radius: 12px;
-            margin-top: 8px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-            display: none;
-            max-height: 520px;
-            overflow: hidden;
-            border: 1px solid var(--header-border);
+            position: absolute; background: var(--card-bg); width: 100%;
+            border-radius: 12px; margin-top: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+            display: none; max-height: 520px; overflow: hidden; border: 1px solid var(--header-border);
         }
 
-        .result-item {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            cursor: pointer;
-        }
-
+        .result-item { display: flex; align-items: center; padding: 10px; cursor: pointer; }
         .result-item:hover { background: var(--header-border); }
         .result-item img { width: 35px; height: 35px; border-radius: 5px; margin-right: 12px; object-fit: cover; }
 
-        /* Botões de Ação */
+        /* Botões */
         .nav-actions { display: flex; gap: 10px; }
-
         .btn-circle {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            border: none;
-            background: var(--blue);
-            color: white;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: 0.2s;
+            width: 40px; height: 40px; border-radius: 50%; border: none;
+            background: var(--blue); color: white; cursor: pointer;
+            display: flex; align-items: center; justify-content: center;
         }
 
-        .btn-circle:hover { transform: scale(1.1); }
-
-        /* Grade de Jogos */
+        /* Card de Jogo */
         #games-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 25px;
-            padding: 40px 5%;
+            display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 25px; padding: 40px 5%;
         }
 
         .game-card {
-            background: var(--card-bg);
-            border-radius: 15px;
-            overflow: hidden;
-            transition: 0.3s;
-            border: 1px solid transparent;
-            cursor: pointer;
-            display: flex;
-            flex-direction: column;
+            background: var(--card-bg); border-radius: 15px; overflow: hidden;
+            transition: 0.3s; border: 1px solid transparent; cursor: pointer;
+            display: flex; flex-direction: column;
         }
 
-        .game-card:hover { border-color: #888888; } /* Borda cinza fina no hover */
-
+        .game-card:hover { border-color: #555; }
         .game-card img { width: 100%; height: 165px; object-fit: cover; }
+
         .card-content { padding: 18px; flex-grow: 1; display: flex; flex-direction: column; }
-        .card-desc { font-size: 14px; color: var(--text-gray); margin: 12px 0; min-height: 42px; }
+        
+        /* Nova Data e Gênero */
+        .post-date { font-size: 11px; color: var(--text-gray); margin-bottom: 5px; }
+        .card-desc { font-size: 14px; color: var(--text-main); margin: 5px 0 12px 0; min-height: 42px; opacity: 0.9; }
+        
+        .genre-tags { display: flex; gap: 5px; flex-wrap: wrap; margin-bottom: 10px; }
+        .tag-genre { font-size: 10px; padding: 2px 8px; border-radius: 4px; background: #333; color: #bbb; }
 
-        .tags { display: flex; gap: 6px; flex-wrap: wrap; margin-bottom: 15px; }
-        .tag { font-size: 10px; padding: 2px 8px; border-radius: 4px; background: #2a2a2a; color: var(--blue); font-weight: bold; text-transform: uppercase; }
+        .provider-tags { display: flex; gap: 6px; margin-bottom: 15px; }
+        .tag-provider { font-size: 10px; color: var(--blue); font-weight: bold; text-transform: uppercase; }
 
-        /* Botão Download Centralizado */
         .btn-download {
-            background: var(--blue);
-            color: white;
-            padding: 12px;
-            border-radius: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            text-align: center;
-            width: 100%;
-            box-sizing: border-box; /* Garante que o padding não "empurre" o botão para fora */
-            display: block;
-            margin-top: auto;
+            background: var(--blue); color: white; padding: 12px; border-radius: 10px;
+            text-decoration: none; font-weight: bold; text-align: center; width: 100%;
+            box-sizing: border-box; display: block; margin-top: auto;
         }
 
         #loading-trigger { height: 80px; display: flex; align-items: center; justify-content: center; color: var(--text-gray); }
@@ -174,24 +136,20 @@
 
         <div class="search-container">
             <div class="search-box">
-                <i class="fas fa-search" style="color: var(--text-gray);" id="btnSearch"></i>
+                <i class="fas fa-search" style="color: var(--text-gray);"></i>
                 <input type="text" id="searchInput" placeholder="Buscando...">
             </div>
             <div id="searchResults" class="search-results"></div>
         </div>
 
         <div class="nav-actions">
-            <button class="btn-circle" id="addGameBtn" title="Criar Jogo">
-                <i class="fas fa-plus"></i>
-            </button>
-            <button class="btn-circle" id="themeBtn">
-                <i class="fas fa-sun" id="themeIcon"></i>
-            </button>
+            <button class="btn-circle" id="addGameBtn"><i class="fas fa-plus"></i></button>
+            <button class="btn-circle" id="themeBtn"><i class="fas fa-sun" id="themeIcon"></i></button>
         </div>
     </header>
 
     <div id="games-grid"></div>
-    <div id="loading-trigger">Carregando mais jogos...</div>
+    <div id="loading-trigger">Carregando...</div>
 
     <script type="module" src="js/indexlogic.js"></script>
 </body>
