--- a/pages/creategame.html
+++ b/pages/creategame.html
@@ -83,6 +83,6 @@
         </form>
     </div>
 
-    <script type="module" src="../js/postgame.js"></script>
+    <script type="module" src="../js/createlogic.js"></script>
 </body>
 </html>
