--- a/pages/post.html
+++ b/pages/post.html
@@ -163,9 +163,9 @@
         <div class="description" id="gameDesc"></div>
 
         <div class="download-area">
-            <h3 style="margin-bottom: 20px;">Link para download via provedor verificado:</h3>
+            <h3 style="margin-bottom: 20px;">Download Abaixo</h3>
             <a href="#" id="gameLink" target="_blank" class="btn-mega-download">
-                <i class="fas fa-cloud-download-alt"></i> BAIXAR AGORA
+                <i class="fas fa-cloud-download-alt"></i> Baixar
             </a>
         </div>
     </div>
