--- a/index.html
+++ b/index.html
@@ -142,11 +142,27 @@
             <div id="searchResults" class="search-results"></div>
         </div>
 
-        <div class="nav-actions">
-            <button class="btn-circle" id="addGameBtn"><i class="fas fa-plus"></i></button>
-            <button class="btn-circle" id="themeBtn"><i class="fas fa-sun" id="themeIcon"></i></button>
-        </div>
-    </header>
+<div class="nav-actions">
+    <a href="https://discord.gg/SNbNbUq8hu" target="_blank" class="btn-circle" style="background: #5865F2;">
+        <i class="fab fa-discord"></i>
+    </a>
+    <a href="pages/suporte.html" class="btn-circle" style="background: #ff4757;">
+        <i class="fas fa-headset"></i>
+    </a>
+    
+    <button class="btn-circle" id="addGameBtn"><i class="fas fa-plus"></i></button>
+    <button class="btn-circle" id="themeBtn"><i class="fas fa-sun" id="themeIcon"></i></button>
+</div><div class="nav-actions">
+    <a href="https://discord.gg/SNbNbUq8hu" target="_blank" class="btn-circle" style="background: #5865F2;">
+        <i class="fab fa-discord"></i>
+    </a>
+    <a href="pages/suporte.html" class="btn-circle" style="background: #ff4757;">
+        <i class="fas fa-headset"></i>
+    </a>
+    
+    <button class="btn-circle" id="addGameBtn"><i class="fas fa-plus"></i></button>
+    <button class="btn-circle" id="themeBtn"><i class="fas fa-sun" id="themeIcon"></i></button>
+</div>
 
     <div id="games-grid"></div>
     <div id="loading-trigger">Carregando...</div>
