--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         .logo-area h1 { font-size: 24px; margin: 0; }
         .logo-area span { color: var(--blue); font-size: 16px; margin-left: 8px; font-weight: bold; }
 
-        .search-container { flex: 1; max-width: 400px; margin: 0 20px; position: relative; }
+        .search-container { flex: 1; max-width: 300px; margin: 0 20px; position: relative; }
         .search-box {
             display: flex;
             align-items: center;
@@ -65,7 +65,21 @@
             margin-left: 10px; outline: none; width: 100%;
         }
 
-        .nav-actions { display: flex; gap: 10px; }
+        .nav-actions { display: flex; gap: 10px; align-items: center; }
+        
+        /* Estilo para os novos botões de texto */
+        .btn-text {
+            color: var(--text-main);
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 8px 15px;
+            border-radius: 8px;
+            transition: 0.2s;
+            background: rgba(255,255,255,0.05);
+        }
+        .btn-text:hover { background: var(--blue); color: white; }
+
         .btn-circle {
             width: 40px; height: 40px; border-radius: 50%; border: none;
             background: var(--card-bg); color: var(--text-main); cursor: pointer;
@@ -128,6 +142,9 @@
         </div>
 
         <div class="nav-actions">
+            <a href="pages/filtrar.html" class="btn-text">Filtrar</a>
+            <a href="pages/terms.html" class="btn-text">Termos</a>
+
             <a href="https://discord.gg/SNbNbUq8hu" target="_blank" class="btn-circle" style="background: #5865F2;">
                 <i class="fab fa-discord" style="color: white;"></i>
             </a>
