--- a/pages/terms.html
+++ b/pages/terms.html
@@ -163,7 +163,7 @@
 
             <div class="term-node">
                 <h2><i class="fas fa-users"></i> 03. Conduta do Usuário</h2>
-                <p>Ao utilizar a plataforma, você concorda em manter um ambiente respeitoso. Postagens que contenham conteúdo ofensivo, discriminatório ou que violem a privacidade de terceiros serão removidas sem aviso prévio.</p>
+                <p>Ao utilizar a plataforma, você concorda em manter um ambiente respeitoso. Postagens que contenham conteúdo ofensivo, discriminatório ou que violem a privacidade de terceiros serão removidas sem aviso prévio, concordando totalmente em seguir os termos e regras da plataforma.</p>
             </div>
 
             <div class="term-node">
