--- a/pages/filter.html
+++ b/pages/filter.html
@@ -139,6 +139,6 @@
         <p class="info-text">Os campos deixados em branco serão ignorados na busca.</p>
     </div>
 
-    <script src="../js/filterlogic.js"></script>
+    <script src="../js/filterLogic.js"></script>
 </body>
 </html>
