--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
 
         <div class="nav-actions">
-            <a href="pages/filtrar.html" class="btn-text">Filtrar</a>
+            <a href="pages/filter.html" class="btn-text">Filtrar</a>
             <a href="pages/terms.html" class="btn-text">Termos</a>
 
             <a href="https://discord.gg/SNbNbUq8hu" target="_blank" class="btn-circle" style="background: #5865F2;">
